<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/account_center_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_account_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="153dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/big_logo"
                    android:text="@string/health_link"
                    android:textColor="@color/tech_blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="37dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo3"
                    android:src="@drawable/shield_alt_1_svgrepo_com__1_"
                    app:tint="@color/tech_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/account_center1"
                    android:textColor="@color/tech_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="@color/tech_blue_50" />

            <!-- Buttons -->
            <Button
                android:id="@+id/btn_change_profile"

                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/tech_blue"
                android:drawableStart="@drawable/userr"
                android:drawablePadding="8dp"
                android:text="@string/update_your_credentials_xml"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="@color/danger_red"
                android:drawablePadding="8dp"
                android:text="Change Password"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"></LinearLayout>
        </LinearLayout>

